# battleship

./: .hgignore  CMakeLists.txt  README.md  battleship.txt  ideas.md  main.cpp
ai/: CMakeLists.txt  RandomShipPlacer.hpp
controller/: AController.cpp  AController.hpp  DefaultController.cpp  DefaultController.hpp  FireController.cpp  PlaceShipsController.cpp  PlaceShipsController.hpp
model/: Cell.hpp  Game.hpp  GameConfiguration.hpp  Player.hpp  Ship.hpp  ShipLocation.hpp
src/: CMakeLists.txt  battleship.txt  main.cpp
src/ai/: AIShooter.cpp  AIShooter.hpp  CMakeLists.txt  RandomShipPlacer.cpp
src/controller/: AController.cpp  AController.hpp  AIFireController.cpp  AIFireController.hpp  CMakeLists.txt  DefaultController.cpp  DefaultController.hpp  FireController.cpp  FireController.hpp  PlaceShipsController.cpp  PlaceShipsController.hpp
src/model/: CMakeLists.txt  Cell.hpp  Game.cpp  Game.hpp  GameConfiguration.hpp  Grid.cpp  Grid.hpp  Orientation.hpp  Player.cpp  Player.hpp  Ship.cpp  Ship.hpp  ShipLocation.hpp
src/ui/: BattleshipApplication.cpp  BattleshipApplication.hpp  CMakeLists.txt  GameWindow.cpp  GameWindow.hpp  GridWindow.cpp  GridWindow.hpp  HiddenGridWindow.cpp  HiddenGridWindow.hpp  Menu.cpp  Menu.hpp  StatusBar.cpp  StatusBar.hpp  VisibleGridWindow.cpp  VisibleGridWindow.hpp
src/ui/config/: ConfigWindow.cpp  NumericResettableField.cpp  NumericResettableField.hpp
ui/: BattleshipApplication.hpp  CMakeLists.txt  GridWindow.hpp  HiddenGridWindow.hpp  Menu.cpp  MessageType.hpp  VisibleGridWindow.cpp
ui/config/: AResettableField.cpp  (+2 more)
