add_library(ui
        GameWindow.cpp GridWindow.cpp Menu.cpp StatusBar.cpp StatusBar.hpp MessageType.hpp VisibleGridWindow.cpp
        VisibleGridWindow.hpp HiddenGridWindow.cpp HiddenGridWindow.hpp BattleshipApplication.cpp BattleshipApplication.hpp
        config/ConfigWindow.cpp config/ConfigWindow.hpp config/AResettableField.cpp config/AResettableField.hpp
        config/NumericResettableField.cpp config/NumericResettableField.hpp)